# entrega-con-patorn-observador

./: README.md  controlador.py  dato.py  metodos_staticos.py  modelo.py  my_base.sqlite3  nivel_avanzado.db  observador.py  pantalla.py  pyproject.toml  requirements.
