[project]
name = "entrega-con-patorn-observador"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Fernando", email = "fernando@fliabardelli.com.ar"},
]
dependencies = [
    "peewee>=3.17.1",
    "tk>=0.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
